Fix title alignment with switch

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -83,9 +83,9 @@ body {
 
 
     //Contenedor boton para cambiar tema
-    .header-theme-button {
+    .header-switch {
         display: flex;
-        align-items: flex-end;
+        flex-direction: column;
 
         p {
             padding: 0;
@@ -106,10 +106,11 @@ body {
             }
         }
 
-        .theme-button-number {
+        .header-switch-number {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end;
             padding-bottom: 5px;
+            letter-spacing: 9px;
 
 
 
@@ -122,10 +123,20 @@ body {
             }
         }
 
+
+        .header-switch-title {
+            display: flex;
+            align-items: center;
+
+            p {
+                font-size: 12px
+            }
+        }
+
         //Contenedor boton ciruclo 
-        .buttons-themes {
-            width: 60px;
-            height: 25px;
+        .switch {
+            width: 50px;
+            height: 20px;
             background-color: $VeryDarkDesaturatedBlue3;
             display: flex;
             align-items: center;
@@ -141,9 +152,9 @@ body {
                 background-color: $VeryDarkVioletBackground;
             }
 
-            .switch {
-                width: 100%;
-                height: 15px;
+            .switch-circule {
+                width: calc(100% - 4px);
+                height: calc(100% - 4px);
                 border-radius: 50%;
             }
 
@@ -152,7 +163,6 @@ body {
             //Boton circulo
             .active-theme {
                 background-color: $Red;
-
 
                 body.theme3 & {
                     background-color: $PureCyan;
